# backend/types/request/users.go
@@ -12,7 +12,7 @@ type CreateUserRequest struct {
 	Phone           string `json:"phone"`
 	Address         string `json:"address"`
 	Date_Of_Birth   string `json:"date_of_birth"`
-	Created_User_ID int    `json:"created_user_id"`
+	Created_User_ID uint   `json:"created_user_id"`
 	// Updated_User_ID int    `json:"updated_user_id"`
 	// Deleted_User_ID int    `json:"deleted_user_id"`
 }
@@ -21,7 +21,7 @@ type FindOneUserRequest struct {
 }
 
 type UpdateUserRequest struct {
-	Id              int    `validate:"required"`
+	Id              uint   `validate:"required"`
 	Name            string `validate:"max=200,min=1" json:"name"`
 	Email           string `validate:"max=200,min=1" json:"email"`
 	Password        string `validate:"max=200,min=1" json:"password"`
@@ -30,5 +30,10 @@ type UpdateUserRequest struct {
 	Phone           string `json:"phone"`
 	Address         string `json:"address"`
 	Date_Of_Birth   string `json:"date_of_birth"`
-	Updated_User_ID int    `json:"updated_user_id"`
+	Updated_User_ID uint   `json:"updated_user_id"`
+}
+
+type LoginRequest struct {
+	Email    string `validate:"required,max=200,min=1" binding:"required" json:"email"`
+	Password string `validate:"required,max=200,min=1" json:"password"`
 }
